# app/Docs/OpenApi.php
@@ -6,11 +6,11 @@ namespace App\Docs;
  * @OA\Info(
  *     title="API de proveedores",
  *     version="1.0.0",
- *     description="Documentación de la API para gestión de proveedores y Productoos."
+ *     description="Documentación de la API para gestión de proveedores y Productos."
  * )
  *
  * @OA\Server(
- *     url="http://127.0.0.1:8080",
+ *     url="http://localhost:8080",
  *     description="Servidor local de desarrollo"
  * )
  */
